spacing + mobile fix

--- a/styles/_map.scss
+++ b/styles/_map.scss
@@ -24,13 +24,13 @@
   }
   #map {
     width: 60%;
-    height: calc(100% - 2rem);
-    padding: 2rem 0 0 2rem;
+    height: 100%;
 
     @media screen and (max-width: $mobile-breakpoint) {
       height: 500px;
       width: 100%;
       padding: 0;
+      margin: 0;
       order: -1;
     }
   }
